--- a/service.yaml
+++ b/service.yaml
@@ -6,7 +6,7 @@ spec:
   template:
     spec:
       containers:
-        - image: us-docker.pkg.dev/cloudrun/container/hello
+        - image: dockkunal/jenkins-pipeline:latest
           ports:
             - name: http1
-              containerPort: 80
+              containerPort: 81
