--- a/deployment1.yaml
+++ b/deployment1.yaml
@@ -2,14 +2,14 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: order-service
-  name: order-service
+    app: jenkins-pipeline
+  name: jenkins-pipeline
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: order-service
+      app: jenkins-pipeline
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -18,12 +18,12 @@ spec:
   template:
     metadata:
       lables:
-      app: order-service
+      app: jenkins-pipeline
     spec:
       containers:
       - image: dockkunal/jenkins-pipeline:latest
         imagePullPolicy: Always
-        name: orderservice
+        name: jenkins-pipeline
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
@@ -31,8 +31,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: order-service
-  name: order-service
+    app: jenkins-pipeline
+  name: jenkins-pipeline
   namespace: default
 spec:
   ports:
