--- a/deployment1.yaml
+++ b/deployment1.yaml
@@ -9,7 +9,8 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: jenkins-pipeline
+      labels:
+        app: jenkins-pipeline
   strategy:
     rollingUpdate:
       maxSurge: 25%
